src/envoy/http/metadata_exchange/testdata/client.yaml
node:
  id: test-client-productpage
  metadata:
    "istio.io/metadata": {
      namespace: default,
      labels: { app: productpage },
    }
static_resources:
  listeners:
  - name: client
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route: 
                  cluster: server
          http_filters:
          - name: envoy.wasm
            config:
              vm_config:
                vm: "envoy.wasm.vm.null"
                code:
                  inline_string: "envoy.wasm.metadata_exchange"
              configuration: "test"
          - name: envoy.router
            config: {}
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
              format: "client %RESPONSE_CODE% downstream_id:%DYNAMIC_METADATA(envoy.wasm.metadata_exchange.downstream_id)% downstream:%DYNAMIC_METADATA(envoy.wasm.metadata_exchange.downstream)% upstream_id:%DYNAMIC_METADATA(envoy.wasm.metadata_exchange.upstream_id)% upstream:%DYNAMIC_METADATA(envoy.wasm.metadata_exchange.upstream)%\n"
  clusters:
  - name: server
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8081
    http2_protocol_options: {}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
